fix. ikke oppdater tilskuddsperioder dersom de er uendret (#1367)
* fix. ikke oppdater tilskuddsperioder dersom de er uendret

Endring gjør at vi sjekker at tilskuddsperiodene vi generere
og de vi har fra før av er like. Dersom de er det, så er det
ikke vits i å endre de vi allerede har.

genererNyeTilskuddsperioder returnerer nå en liste med nye
tilskuddsperiode istedenfor å endre tilskuddsperiodene i avtalen.
På denne måten kan vi sjekke om det har skjedd en endring før vi
legger til de nye.

* fix. erstatte tilskuddsperioder istedenfor å endre

* feat. bruk compareTo istedenfor equals for sammenligning av tilskuddsperioder